# learnOpenGL

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: camera.hpp  glad.c  shader.cpp  shader.h  test.cpp
src/lesson1/: lesson1-ex1.cpp  lesson1-ex2.cpp  lesson1-ex3.cpp  lesson1.cpp
src/lesson2/: lesson2-ex1.cpp  lesson2-ex2.cpp  lesson2-ex3.cpp  lesson2.cpp
src/lesson2/shaders/: shader-ex1.vs  shader-ex2.vs  shader-ex3.fs  shader-ex3.vs  shader.vs
src/lesson3/: lesson3-ex1.cpp  lesson3-ex2.cpp  lesson3-ex3.cpp  lesson3-ex4.cpp  lesson3.cpp
src/lesson3/shaders/: shader-ex1.fs  shader-ex4.fs  shader.fs  shader.vs
src/lesson4/: lesson4-ex1.cpp  lesson4-ex2.cpp  lesson4.cpp
src/lesson4/shaders/: shader.vs
src/lesson5/: lesson5-ex1.cpp  lesson5-ex2.cpp  lesson5-ex3.cpp  lesson5.cpp
src/lesson6/: lesson6-ex2.cpp  lesson6.cpp
src/lighting/: CMakeLists.txt  lesson1.cpp  lesson2-ex1.cpp  lesson2-ex2.cpp  lesson2-ex4.cpp  lesson2.cpp  lesson3-cyan_plastic.cpp  lesson3-red_rubber.cpp  lesson3.cpp  lesson4-ex2.cpp  lesson4-ex3.cpp  lesson4-ex4.cpp  lesson4.cpp  lesson5.cpp  lesson6.cpp
src/lighting/shader/lesson2/: object.fs  vertex.vs
src/lighting/shader/lesson2-ex2/: object.fs
src/lighting/shader/lesson2-ex4/: object.fs  vertex.vs
src/lighting/shader/lesson3/: object.fs
src/lighting/shader/lesson4/: object.fs
src/lighting/shader/lesson4-ex2/: object.fs  object.vs
src/lighting/shader/lesson4-ex4/: object.fs
src/lighting/shader/lesson5/: lightCube.vs  object.fs
src/lighting/shader/lesson6/: object.fs
